--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Usha Engineering</title>
+		<meta name="google-site-verification" content="9mprCjsPMcWVJAlsszFIQ0gg9rFHYEtL4VQzb-Qn-ik" />
 	</head>
 	<body>
 		<div id="root"></div>
