fixed some minor bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Usha Engineering</title>
+		<title>Usha Advance Engineering</title>
 		<meta name="google-site-verification" content="9mprCjsPMcWVJAlsszFIQ0gg9rFHYEtL4VQzb-Qn-ik" />
 	</head>
 	<body>
